tests/syntax_error/double_assignment_comma_typed.jou
def foo() -> None:
    x, y: int = 7  # Error: only one variable can be assigned at a time
